fix section block spacing

--- a/automad/src/client/admin/styles/components/editor/blocks/section.less
+++ b/automad/src/client/admin/styles/components/editor/blocks/section.less
@@ -74,14 +74,13 @@
 		position: relative;
 		display: flex;
 		align-items: center;
-		height: 1.65rem;
-		padding: 0 0.6em;
+		height: 1.75rem;
+		padding: 0 0.85em;
 		font-size: @am-small-font-size;
 		font-weight: 560;
-		color: hsl(var(--am-clr-text-primary));
-		background: hsl(var(--am-clr-background-primary));
+		color: hsl(var(--am-clr-text));
+		background: hsl(var(--am-clr-border));
 		border-top-left-radius: @am-form-radius;
-		outline: 1px solid hsl(var(--am-clr-background-primary));
 		cursor: pointer;
 	}
 
